# PhysicsEngine

./: CMakeLists.txt  PhysicsEngine
Assets/: uvtemplate1.DDS
Core/: BaseComponent.hpp  Component.hpp  GameObject.hpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.hpp  PhysicsManager.cpp  PhysicsManager.hpp  RenderComponent.hpp  Scene.hpp  System.hpp  Transform.cpp  Transform.hpp
GameLoop/: main.cpp
Mesh/: Mesh.hpp  Mesh_Box.cpp  Mesh_Box.hpp  Mesh_Box_Line.cpp  Mesh_Box_Line.hpp  Mesh_Plane.hpp  Mesh_Plane_Line.hpp  Mesh_Sphere.hpp  Mesh_Sphere_Line.hpp
Rendering/: RenderManager.cpp  RenderManager.hpp  text2D.cpp  text2D.hpp
Rendering/shaders/: LineMesh_FS.glsl  LineMesh_VS.glsl  Phong_FS.glsl  Phong_VS.glsl  Simple_FS.glsl  Simple_VS.glsl  Text2D_FS.glsl  Text2D_VS.glsl
common/: controls.cpp  controls.hpp  objloader.cpp  objloader.hpp  quaternion_utils.cpp  text2D.cpp  texture.cpp  texture.hpp  vboindexer.cpp  vboindexer.hpp
